# zk-whistle

./: README.md
gateway/: Cargo.toml  README.md
gateway/src/: config.rs  errors.rs  main.rs
gateway/src/models/: mod.rs
gateway/src/routes/: mod.rs  proof.rs  types.rs
verification-server/: .env.example  README.md  package.json
verification-server/src/: index.ts
verification-server/src/config/: database.ts
verification-server/src/controllers/: verifyController.ts
verification-server/src/models/: Verification.ts
verification-server/src/routes/: index.ts
verification-server/src/utils/: plVerifier.ts  proof_leak_contracts.json  worker.ts
zkpdf/app/: proof.json
