[package]
name = "gateway"
version = "0.1.0"
edition = "2024"


[dependencies]
actix-cors = "0.7.1"
actix-web = "4.11.0"
dotenv = "0.15.0"
env_logger = "0.11.8"
futures = "0.3.31"
oximod = "0.1.7"
oximod_core = "0.1.10"
poem = { version = "3.1.12" , features =["test"] }
reqwest = { version = "0.12.23" , features = ["json" ] }
serde = "1.0.219"
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = {version = "1.17.0",  features = ["rt-multi-thread", "macros"]  }
tracing-subscriber = { version = "0.3.9", features = ["env-filter"] }
